2009-12-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tabulate: Fix buffer overflow.

2009-12-24  Robert Schwebel <r.schwebel@pengutronix.de>

	* configure.in docs/Makefile.in:
	When cross compiling gnuplot, build the documentation generation tools
	in docs/ with CC_FOR_BUILD (host compiler), not with the cross compiler.

2009-12-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/win/wgraph.c (drawgraph: W_line_type):  Change initial line
	template for LT_BACKGROUND to 0 (lt -1) rather than 1 (lt 0).
	Possible fix for bug #1952287

2009-12-19  Juergen Wieferink  <wieferink@freenet.de>

	* src/command.c, src/command.h, src/misc.c, src/misc.h
	(lf_push, lf_pop): Save if-state.

	* src/command.c, src/command.h, src/misc.c, src/misc.h
	(lf_push, lf_pop, load_file, do_string):
	Refactor duplicate code from load_file() and do_string() into lf_push()

	* misc.h, misc.c: Add field cmdline to LFS to allow correct
	deallocation.  Check for infinite recursion.

	* src/misc.c (prepare_call, expand_call_args, load_file):
	Refactor code related to the call command out of load_file().

	* src/command.c (history_command): Use do_string() now that it can
	detect recursions.

	* command.c, command.h, plot.c:
	Remove eval_depth and reset_eval_depth().  The new recursion detection
	in lf_push() should supercede this.

2009-12-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tables.h src/tables.c src/show.c src/save.c src/graph3d.h:
	Move all the DGRID3D_* options into a shared table.

	* src/set.c: Replace the set_dgrid3d() routine with a version that uses
	a shared option table and handles input values contained in variables.

	* docs/gnuplot.doc: bring dgrid3d syntax into line with the code

2009-12-12  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/plotstyles.gnu demo/bldg.png demo/barchart_art.dem Makefile.am.in
	New demo showing 
	a) input of png image using binary filetype=png
	b) rescaling rectangular images to act as plot elements
